--- a/caliber/pom.xml
+++ b/caliber/pom.xml
@@ -245,9 +245,16 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<configuration>
+						<!-- latest version of webapp must be deployed before running these 
+							test. run app as mvn tomcat7:deploy then kick these tests off with the commands: -->
 						<excludes>
+							<!-- mvn -Dtest=CukesRunner test -->
 							<exclude>
 								com/revature/caliber/test/uat/CukesRunner.java
+							</exclude>
+							<!-- mvn -Dtest=**APITest test -->
+							<exclude>
+								com/revature/caliber/test/api/**
 							</exclude>
 						</excludes>
 					</configuration>
