--- a/caliber/pom.xml
+++ b/caliber/pom.xml
@@ -227,6 +227,11 @@
 			<artifactId>json-schema-validator</artifactId>
 			<version>3.0.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>htmlunit-driver</artifactId>
+			<version>2.23</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>caliber</finalName>
