--- a/caliber/pom.xml
+++ b/caliber/pom.xml
@@ -25,6 +25,12 @@
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>21.0</version><!--$NO-MVN-MAN-VER$ -->
+		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
@@ -228,12 +234,12 @@
 			<version>3.0.3</version>
 		</dependency>
 		<dependency>
-		    <groupId>com.oakfusion</groupId>
-		    <artifactId>phantomjs-dep</artifactId>
-		    <version>1.9.7</version>
-		    <type>pom</type>
+			<groupId>com.oakfusion</groupId>
+			<artifactId>phantomjs-dep</artifactId>
+			<version>1.9.7</version>
+			<type>pom</type>
 		</dependency>
-		
+
 	</dependencies>
 	<build>
 		<finalName>caliber</finalName>
