--- a/caliber/pom.xml
+++ b/caliber/pom.xml
@@ -25,6 +25,12 @@
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>21.0</version><!--$NO-MVN-MAN-VER$ -->
+		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
@@ -209,7 +215,7 @@
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
-			<version>3.5.3</version>
+			<version>3.4.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
@@ -228,10 +234,12 @@
 			<version>3.0.3</version>
 		</dependency>
 		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>htmlunit-driver</artifactId>
-			<version>2.23</version>
+			<groupId>com.oakfusion</groupId>
+			<artifactId>phantomjs-dep</artifactId>
+			<version>1.9.7</version>
+			<type>pom</type>
 		</dependency>
+
 	</dependencies>
 	<build>
 		<finalName>caliber</finalName>
@@ -278,5 +286,4 @@
 			</plugins>
 		</pluginManagement>
 	</build>
-
 </project>
