--- a/caliber/pom.xml
+++ b/caliber/pom.xml
@@ -26,6 +26,11 @@
 	</dependencyManagement>
 	<dependencies>
 		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.0</version>
+		</dependency>
+		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 		</dependency>
