--- a/microservices/dto/pom.xml
+++ b/microservices/dto/pom.xml
@@ -53,6 +53,17 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+    		<groupId>org.mock-server</groupId>
+    		<artifactId>mockserver-netty</artifactId>
+    		<version>3.10.8</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.mock-server</groupId>
+		    <artifactId>mockserver-client-java</artifactId>
+		    <version>3.10.8</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
