rm'd my file and tested pdf
- removed file that I used to bypass Spring security (doesn't work; needed to modify in the yml)
- changed pdf-controller uri to localhost of pdf-service MSA; test on original caliber works

--- a/microservices/pdf/src/main/resources/application.yml
+++ b/microservices/pdf/src/main/resources/application.yml
@@ -12,3 +12,10 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+      
+security:
+  basic:
+    enabled: false
+  user:
+    name: user
+    password: pass
