--- a/microservices/category/src/main/resources/application.yml
+++ b/microservices/category/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 5252
+  port: 5253
   
 spring:
   application:
-    name: pdf-service
+    name: category-service
     
 eureka:
   instance:
