--- a/microservices/pdf/src/main/resources/application.yml
+++ b/microservices/pdf/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 5252
+  port: 8081
   
 spring:
   application:
@@ -12,3 +12,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+      
+security:
+  basic:
+    enabled: false
