--- a/microservices/panel/src/main/resources/application.yml
+++ b/microservices/panel/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 5252
+  port: 5254
   
 spring:
   application:
-    name: pdf-service
+    name: panel-service
     
 eureka:
   instance:
@@ -12,3 +12,6 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+security:
+  basic:
+    enabled: false
