--- a/microservices/dto/pom.xml
+++ b/microservices/dto/pom.xml
@@ -75,6 +75,11 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-security</artifactId>
+        <version>1.2.1.RELEASE</version>
+    </dependency>
 		</dependencies>
 	</dependencyManagement>
 
