--- a/caliber/pom.xml
+++ b/caliber/pom.xml
@@ -26,6 +26,11 @@
 	</dependencyManagement>
 	<dependencies>
 		<dependency>
+    		<groupId>javax.xml.bind</groupId>
+    		<artifactId>jaxb-api</artifactId>
+    		<version>2.1</version>
+		</dependency>
+		<dependency>
 			<groupId>com.sun.mail</groupId>
 			<artifactId>javax.mail</artifactId>
 			<version>1.6.0</version>
