--- a/microservices/docker-compose.yml
+++ b/microservices/docker-compose.yml
@@ -4,6 +4,17 @@ services:
     build: ./zuul
     ports: 
     - "8080:8181"
-
+  config:
+    build: ./config
+#  panel:
+#    build: ./panel
+  trainer:
+    build: ./trainer
+#  pdf:
+#    build: ./pdf
+#  category:
+#    build: ./category
+  eureka:
+    build: ./eureka
 
   
