--- a/microservices/pom.xml
+++ b/microservices/pom.xml
@@ -4,12 +4,19 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.springframework</groupId>
-    <artifactId>gs-multi-module</artifactId>
+    <artifactId>microservice-parent</artifactId>
     <version>0.1.0</version>
     <packaging>pom</packaging>
 
     <modules>
         <module>zuul</module>
+<!--	<module>BatchService</module>-->
+	<module>category</module>
+	<module>panel</module>
+	<module>config</module>
+	<module>eureka</module>
+	<module>trainer</module>
+	<module>pdf</module>
     </modules>
 
 </project>
