--- a/microservices/Jenkinsfile
+++ b/microservices/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
      
      stage ("mvnw"){
      	   steps {
-	   	 sh "mvnw clean install"
+	   	 sh "./mvnw clean install -Dmaven.test.skip=true"
 		 }
      }
 /*    stage ("Stopping"){
