--- a/microservices/Assessment/pom.xml
+++ b/microservices/Assessment/pom.xml
@@ -4,9 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.revature</groupId>
-	<artifactId>category-service</artifactId>
+	<artifactId>Assessment</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
+
+	<name>Assessment</name>
+	<description>Demo project for Spring Boot</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -116,6 +119,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
 
 </project>
