eureka, registry spelled wrong

--- a/microservices/eureka/src/main/resources/application.yml
+++ b/microservices/eureka/src/main/resources/application.yml
@@ -4,6 +4,6 @@ server:
 eureka:
   client:
     registerWithEureka: false
-    fetchRegistery: false
+    fetchRegistry: false
   server:
     enableSelfPreservation: false
