--- a/microservices/Location/src/main/resources/application.yml
+++ b/microservices/Location/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 5253
+  port: 5256
   
 spring:
   application:
-    name: category-service
+    name: location-service
   rabbitmq:
     host: localhost
     port: 5672
