--- a/microservices/security/pom.xml
+++ b/microservices/security/pom.xml
@@ -54,6 +54,10 @@
 			<scope>test</scope>
 		</dependency>
 		
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-eureka</artifactId>
+    </dependency>
 		<dependency>
     		<groupId>org.mock-server</groupId>
     		<artifactId>mockserver-netty</artifactId>
