--- a/microservices/dto/pom.xml
+++ b/microservices/dto/pom.xml
@@ -64,6 +64,11 @@
 		    <artifactId>mockserver-client-java</artifactId>
 		    <version>3.10.8</version>
 		</dependency>
+   <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-eureka</artifactId>
+    </dependency>
+	
 	</dependencies>
 
 	<dependencyManagement>
