--- a/caliber/pom.xml
+++ b/caliber/pom.xml
@@ -97,9 +97,9 @@
 			<artifactId>slf4j-simple</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.oracle.ojdbc</groupId>
-			<artifactId>ojdbc</artifactId>
-			<version>12.1.0.1</version>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc6</artifactId>
+			<version>11.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
