--- a/caliber/pom.xml
+++ b/caliber/pom.xml
@@ -26,7 +26,7 @@
 			<dependency>
 				<groupId>io.spring.platform</groupId>
 				<artifactId>platform-bom</artifactId>
-				<version>2.0.3.RELEASE</version>
+				<version>Brussels-SR10</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -35,36 +35,10 @@
 	
 	<dependencies>
 	
-		<!-- DevTools for automatic reload -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		
 		<!-- Spring Data JPA -->
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
-		</dependency>
-		
-		<!-- Spring MVC and Web Tools -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-
-		<!-- Spring Boot AOP -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-aop</artifactId>
-		</dependency>
-
-		<!-- For Testing -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
 		</dependency>
 
 		<dependency>
@@ -276,8 +250,7 @@
 			<artifactId>json-schema-validator</artifactId>
 			<version>3.0.3</version>
 		</dependency>
-		
-		<!--  
+		  
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -340,7 +313,7 @@
 				</exclusion>
 			</exclusions>
 			<scope>provided</scope>
-		</dependency> -->
+		</dependency> 
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-core</artifactId>
