trying to run tests

--- a/caliber/src/main/webapp/WEB-INF/web.xml
+++ b/caliber/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,8 @@
         <param-name>contextConfigLocation</param-name>
         <param-value>
             /WEB-INF/beans.xml
-            /WEB-INF/spring-task.xml       
+            /WEB-INF/spring-task.xml     
+            /WEB-INF/integration-test.xml  
         </param-value>
     </context-param>
     <filter>
