--- a/caliber-config/src/main/resources/application.yml
+++ b/caliber-config/src/main/resources/application.yml
@@ -6,9 +6,9 @@ spring:
     config:
       server:
         git:
-          uri: ${CONFIG_SERVER_GIT_URI}
-          username: ${CONFIG_SERVER_USERNAME}
-          password: ${CONFIG_SERVER_PASSWORD}
+          uri: ${CALIBER_CONFIG_GIT_URI}
+          username: ${CALIBER_CONFIG_GIT_USERNAME}
+          password: ${CALIBER_CONFIG_GIT_PASSWORD}
   application:
     name: caliber-config
     
